--- a/ez-finances-web/src/main/resources/locale/messages.properties
+++ b/ez-finances-web/src/main/resources/locale/messages.properties
@@ -1,1 +1,3 @@
 internal.server.error=Unexpected error. Try again later.
+entity.not.found=There were not records with the provided ID.
+invalid.format=Could not serialize a field, wrong format.
