--- a/ez-finances-web/src/main/resources/locale/messages.properties
+++ b/ez-finances-web/src/main/resources/locale/messages.properties
@@ -1,3 +1,16 @@
+#System Errors
 internal.server.error=Unexpected error. Try again later.
 entity.not.found=There were not records with the provided ID.
 invalid.format=Could not serialize a field, wrong format.
+
+#Profile Errors
+profile.not.found=Profile not found.
+
+#Source Errors
+source.not.found=Source not found.
+
+#Translation Errors
+translation.not.found=Translation not found.
+
+#Transaction Errors
+transaction.not.found=Transaction not found.
