--- a/ez-finances-web/src/main/resources/locale/messages.properties
+++ b/ez-finances-web/src/main/resources/locale/messages.properties
@@ -1,7 +1,8 @@
 #System Errors
 internal.server.error=Unexpected error. Try again later.
 entity.not.found=There were not records with the provided ID.
-invalid.format=Could not serialize a field, wrong format.
+invalid.format=Could not serialize a field, wrong format. Please check the service documentation.
+missing.parameter=Missing request parameter. Please check the service documentation.
 
 #Profile Errors
 profile.not.found=Profile not found.
