--- a/ez-finances-web/src/main/resources/locale/messages.properties
+++ b/ez-finances-web/src/main/resources/locale/messages.properties
@@ -15,3 +15,5 @@ translation.not.found=Translation not found.
 
 #Transaction Errors
 transaction.not.found=Transaction not found.
+file.not.found=File not found.
+ofx.read.error=Error while reading the OFX file.
