source integration tests

--- a/ez-finances-web/src/main/resources/locale/messages.properties
+++ b/ez-finances-web/src/main/resources/locale/messages.properties
@@ -4,6 +4,7 @@ entity.not.found=There were not records with the provided ID.
 invalid.format=Could not serialize a field, wrong format. Please check the service documentation.
 missing.parameter=Missing request parameter. Please check the service documentation.
 invalid.argument=Missing body parameter. Please check the service documentation.
+argument.mismatch=Path parameter in wrong format. Please check the service documentation.
 
 #Profile Errors
 profile.not.found=Profile not found.
