--- a/ez-finances-web/src/main/resources/locale/messages.properties
+++ b/ez-finances-web/src/main/resources/locale/messages.properties
@@ -5,17 +5,21 @@ invalid.format=Could not serialize a field, wrong format. Please check the servi
 missing.parameter=Missing request parameter. Please check the service documentation.
 invalid.argument=Missing body parameter. Please check the service documentation.
 argument.mismatch=Path parameter in wrong format. Please check the service documentation.
+missing.header=Missing header. Please check the service documentation.
 
 #Profile Errors
 profile.not.found=Profile not found.
 
 #Source Errors
 source.not.found=Source not found.
+source.invalid.profile=This source does not belong to the provided profile.
 
 #Translation Errors
 translation.not.found=Translation not found.
+translation.invalid.profile=This translation does not belong to the provided profile.
 
 #Transaction Errors
 transaction.not.found=Transaction not found.
+transaction.invalid.profile=This transaction does not belong to the provided profile.
 file.not.found=File not found.
 ofx.read.error=Error while reading the OFX file.
